--- a/src/components/pokemonList/pokemonlist.css
+++ b/src/components/pokemonList/pokemonlist.css
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+   
 }
 
 .pokemon-type-box{
@@ -58,6 +59,12 @@
     border: 1px solid white;
     padding: 0.2rem;
     border-radius: 1rem;
+    
+}
+
+.pokemon-card-navlink{
+    /* text-decoration: none; */
+    color: black;
 }
 
 .pokemon-type{
