--- a/src/components/pokemonstats/pokemonstats.css
+++ b/src/components/pokemonstats/pokemonstats.css
@@ -1,5 +1,23 @@
-.pokemon-state-card{
+
+
+.pokemon-stats{
     width: 100%;
     height: 80%;
     display: flex;
+    color: white;
+    gap: 1rem;
+    align-items: center;
+    
+}
+
+.pokemon-stat-name{
+    display: flex;
+    width: 100%;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+}
+
+.pokemon-base-stat{
+    
+    width: 100%;
 }
