--- a/src/components/searchbar/searchbar.css
+++ b/src/components/searchbar/searchbar.css
@@ -1,6 +1,51 @@
-.input{
+/* .input{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+  } */
+
+.searchbar{
+  display: flex;
+  flex-direction: row;
+  gap: 0;
+  width: 30%;
+  justify-content: center;
+  border-radius: 1rem;
+  background-color: white;
+}
+
+.input-box{
+  outline: none;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 1rem;
+  background-color: transparent;
+  padding: 1rem;
+}
+.search-icon-box{
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.search-icon{
+  font-size: 1.5rem;
+}
+
+
+@media (max-width:950px){
+
+  .searchbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 80%;
+    padding: 0 1rem;
+    margin: 0 auto;
   }
+  
+}
