--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .main-page{
-  background: linear-gradient(to right, black, white);
+  background: linear-gradient(to right, rgb(0, 0, 0), rgb(40, 40, 40));
 }
